JAVA-31430 Review add-opens and add-exports in modules - Week 9 - 2024 (#16008)
* JAVA-31430 Review add-opens and add-exports in modules - Week 9 - 2024

* JAVA-31430 Some fixes

---------

Co-authored-by: timis1 <noreplay@yahoo.com>